# coagent-code-evals

./: MULTI_PIPELINE_EVALUATION_SUMMARY.md  README 2.md  README-aipack-flow.md  README-multi-pipeline-evaluation.md  README.md  action_oriented_ontologies.md  aipack-alternatives-analysis.md  bm25_vs_LLMS.md  code-reviewer.yaml  comparison_agentic_systems_federated_search.md  comparison_ontology.md  federated_search.md  privacy_first.md  pyproject.toml  requirements.txt  temp_code.txt
rust-analysis-tools/: Cargo.toml  debug_smolagents.py  evaluation-result-2025-08-26_20-09-05.md  evaluation-result-2025-08-26_21-28-24.md  evaluation_metrics.md  quick-test-result.md  run-rust-evaluation.sh  test_code.rs
rust-analysis-tools/.aipack/: config.toml
rust-analysis-tools/aipack-flows/: rust-eval-direct.aip  rust-eval-fetcher.aip  rust-eval-ner.aip  rust-evaluation-enhanced.aip  rust-evaluator-simple.aip  rust-evaluator-working.aip  rust-evaluator.aip  rust-flow-orchestrator.aip  rust-refactor.aip
rust-analysis-tools/data-compactor/: Cargo.toml  README.md
rust-analysis-tools/data-compactor/src/: compactor_comparison_test.rs  efficient_compactor.rs  efficient_compactor_test.rs  lib.rs  truly_efficient_compactor.rs
rust-analysis-tools/evaluation-scripts/: aipack-multi-model-test.sh  demo-evaluation.sh  enhanced-multi-model-evaluation.sh  multi-model-evaluation.aip  quick-test-result.md  quick-test.sh  run-multi-model-evaluation.sh  run-select-models.sh  setup_evaluation_pipelines.sh  test-few-models.sh
rust-analysis-tools/evaluation-scripts/.aipack/: config.toml
rust-analysis-tools/evaluation-scripts/multi-model-results-2025-08-26_22-08-46/: codellama-7b-evaluation.md  cogito-latest-evaluation.md  comparison-summary.md  deepseek-coder-latest-evaluation.md  gemma3-27b-evaluation.md  llama3.2-3b-evaluation.md  qwen2.5-coder-latest-evaluation.md  qwen3-8b-evaluation.md  qwen3-coder-latest-evaluation.md  qwen3-latest-evaluation.md  victornitu-rust-coder-latest-evaluation.md
rust-analysis-tools/evaluation-scripts/test-models-2025-08-26_21-17-47/: llama3.2:3b-evaluation.md
rust-analysis-tools/evaluation-scripts/test-models-2025-08-26_22-32-49/: deepseek-coder:latest-evaluation.md  (+2 more)
rust-analysis-tools/examples/: advanced_validation.rs  basic_validation.rs
rust-analysis-tools/pipeline-tests/: test_aipack.py  test_aipack_isolation.py  test_aipack_performance.py  test_aipack_timeout.py  test_crewai.py  test_pipelines.py  test_smolagents.py
(+17 files in other folders)
